# schelm

./: AGENTS.md  Cargo.toml  api.json  justfile
.github/workflows/: tests.yml
crates/schelm-ores/: AGENTS.md  Cargo.toml
crates/schelm-ores/src/client/: error.rs  http.rs  mod.rs  sse.rs
crates/schelm-ores/src/client/endpoints/: responses.rs
crates/schelm-ores/src/models/: README.md  mod.rs  type_relationships.dot
crates/schelm-ores/tests/: responses.rs  streaming_responses.rs
crates/schelm-ores/tests/common/: mod.rs
src/: lib.rs
src/client/: builder.rs  error.rs  http.rs
src/client/endpoints/: responses.rs
src/models/: README.md  mod.rs
tests/: responses.rs
tests/common/: mod.rs
