[package]
name = "schelm-ores"
version.workspace = true
edition.workspace = true
description = "Schelm's OpenResponses Rust SDK"

[features]
default = []
# Enables the HTTP client implementation (reqwest-based).
client = ["dep:reqwest", "dep:url", "dep:thiserror", "dep:futures-core", "dep:bytes"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["macros"] }

# Optional HTTP client dependencies
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "stream"], optional = true }
url = { version = "2", optional = true }
thiserror = { version = "2", optional = true }
futures-core = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
# Used for async unit tests of the client module.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
